# kogpt2-service

./: .gitignore  LICENSE  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
kogpt2_service/: __init__.py
