[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kogpt2_service"
authors = [{name = "comfuture", email = "comfuture@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
  "torch == 1.12.0",
  "ratsnlp >= 1.0.52",
]